<resources>
    <string name="app_name">ScalingAnimationDroid</string>
    <string name="duration_down">Duration Down:</string>
    <string name="duration_up">Duration Up:</string>
    <string name="scaling_in">Scaling In</string>
    <string name="scaling_out">Scaling Out</string>
    <string name="scaling_type">Scaling Type</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="_0ms">0ms</string>
    <string name="_0">0</string>
    <string name="_1000ms">1000ms</string>
    <string name="scaling_padding">Scaling Padding</string>
    <string name="_1_0f">1.0f</string>
    <string name="_0_0f">0.0f</string>
    <string name="todo">TODO: \n1.Scrolling param.\n2.Touch SUBMIT button.\n3.Click images.\n4.If you choose new params please touch RESET button.</string>
    <string name="content_ms">Value: %dms</string>
    <string name="content_f">Value: %.1ff</string>
</resources>
